--- a/client/index.css
+++ b/client/index.css
@@ -4,79 +4,143 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  background-color: white;
-  color: black;
+  color: #111611;
   font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: lighter;
+  font-weight: bold;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+}
+
+/*APP SHELL*/
+
+.shell-border {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: #111611;
 }
 
 .shell {
-  height: 100vh;
+  width: 97%;
+  height: 94%;
+  position: relative;
+  background-color: #eaeaea;
+  margin: auto;
+  top: 1%;
+  box-shadow: inset 0 0 3px;
+}
+
+.home-button {
+  position: fixed;
+  bottom: 0.5%;
+  width: 100%;
+  height: 4%;
+  z-index: 3;
   text-align: center;
+}
+
+.home-button img {
+  height: 100%;
+  width: auto;
 }
 
 /*HOME HEADER*/
 .header {
-  margin: 5% 2%;
+  text-align: right;
+  top: 1%;
+  right: 1%;
+  padding: 3% 2% 0 0;
 }
 
 .customer-type {
   display: inline-block;
   width: 20%;
-  height: auto;
   text-align: center;
+  font-size: 1.3rem;
+  margin: 0 0.5%;
 }
 
 .human {
-  border: 1px solid black;
-  background-color: black;
-  color: white;
-  margin-left: 55%;
+  box-shadow: none;
+  color: #f7f9f7;
+  background-color: #111611;
 }
 
 .merchant {
-  border: 1px solid black;
+  color: #111611;
+  background-color: #f7f9f7;
+  box-shadow: 0 0 3px 1px #111611;
 }
 
 /*CUSTOMER HOME PAGE*/
 .customer-home {
   text-align: left;
-  width: 100%;
-  max-width: 414px;
-  height: 100%;
-  max-height: 736px;
+  width: 94%;
+  height: auto;
   margin: auto;
-  display: inline-block;
-  vertical-align: middle;
+  /*border: 1px dotted red;*/
 }
 
-@media (min-width: 415px) {
-  .home {
-    border: 1px solid white;
-    border-radius: 2%;
-  }
+.intro h1 {
+  font: 1.75rem;
 }
 
-.header h1 {
-  font-weight: bold;
+.intro h3 {
+  font-size: 1.25rem;
 }
 
 .line-break {
   border: 0.5px solid black;
-  margin: 1%;
-  width: 80%;
+  margin: 1% auto 3% auto;
+  width: 90%;
 }
 
-.header h3 {
-  width: auto;
+.intro-text {
   display: inline;
 }
+
+.read-more {
+  display: inline;
+  text-decoration: underline;
+}
+
+.home-more {
+  display: none;
+}
+
+/*LOCATION AUTH*/
+.location {
+  text-align: center;
+  width: 90%;
+  margin: auto;
+  padding-top: 10%;
+}
+
+.location h4 {
+  margin-bottom: 5%;
+  font-size: 1.1rem;
+}
+
+.authorize {
+  width: 30%;
+  margin: auto;
+  text-align: center;
+  font-size: 1.3rem;
+  color: #111611;
+  background-color: #f7f9f7;
+  box-shadow: 0 0 3px 1px #111611;
+}
+
 /**/
 .current {
   border: 1px dashed black;
   width: 80%;
   margin: 0 10%;
   height: auto;
+  display: none;
 }
 
 .store {
@@ -97,4 +161,9 @@
 /*MERCHANT HOME PAGE*/
 .merchant-home {
   display: none;
+  border: 1px dashed blue;
+  text-align: left;
+  width: 94%;
+  height: auto;
+  margin: auto;
 }
