--- a/dev/css/app_shell.css
+++ b/dev/css/app_shell.css
@@ -1,4 +1,32 @@
+/*APP SHELL*/
+
+.shell-border {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: #111611;
+}
+
 .shell {
-  height: 100vh;
+  width: 97%;
+  height: 94%;
+  position: relative;
+  background-color: #eaeaea;
+  margin: auto;
+  top: 1%;
+  box-shadow: inset 0 0 3px;
+}
+
+.home-button {
+  position: fixed;
+  bottom: 0.5%;
+  width: 100%;
+  height: 4%;
+  z-index: 3;
   text-align: center;
+}
+
+.home-button img {
+  height: 100%;
+  width: auto;
 }
