--- a/dev/css/customer_home.css
+++ b/dev/css/customer_home.css
@@ -1,42 +1,69 @@
 /*CUSTOMER HOME PAGE*/
 .customer-home {
   text-align: left;
-  width: 100%;
-  max-width: 414px;
-  height: 100%;
-  max-height: 736px;
+  width: 94%;
+  height: auto;
   margin: auto;
-  display: inline-block;
-  vertical-align: middle;
+  /*border: 1px dotted red;*/
 }
 
-@media (min-width: 415px) {
-  .home {
-    border: 1px solid white;
-    border-radius: 2%;
-  }
+.intro h1 {
+  font: 1.75rem;
 }
 
-.header h1 {
-  font-weight: bold;
+.intro h3 {
+  font-size: 1.25rem;
 }
 
 .line-break {
   border: 0.5px solid black;
-  margin: 1%;
-  width: 80%;
+  margin: 1% auto 3% auto;
+  width: 90%;
 }
 
-.header h3 {
-  width: auto;
+.intro-text {
   display: inline;
 }
+
+.read-more {
+  display: inline;
+  text-decoration: underline;
+}
+
+.home-more {
+  display: none;
+}
+
+/*LOCATION AUTH*/
+.location {
+  text-align: center;
+  width: 90%;
+  margin: auto;
+  padding-top: 10%;
+}
+
+.location h4 {
+  margin-bottom: 5%;
+  font-size: 1.1rem;
+}
+
+.authorize {
+  width: 30%;
+  margin: auto;
+  text-align: center;
+  font-size: 1.3rem;
+  color: #111611;
+  background-color: #f7f9f7;
+  box-shadow: 0 0 3px 1px #111611;
+}
+
 /**/
 .current {
   border: 1px dashed black;
   width: 80%;
   margin: 0 10%;
   height: auto;
+  display: none;
 }
 
 .store {
