--- a/dev/css/header.css
+++ b/dev/css/header.css
@@ -1,22 +1,27 @@
 /*HOME HEADER*/
 .header {
-  margin: 5% 2%;
+  text-align: right;
+  top: 1%;
+  right: 1%;
+  padding: 3% 2% 0 0;
 }
 
 .customer-type {
   display: inline-block;
   width: 20%;
-  height: auto;
   text-align: center;
+  font-size: 1.3rem;
+  margin: 0 0.5%;
 }
 
 .human {
-  border: 1px solid black;
-  background-color: black;
-  color: white;
-  margin-left: 55%;
+  box-shadow: none;
+  color: #f7f9f7;
+  background-color: #111611;
 }
 
 .merchant {
-  border: 1px solid black;
+  color: #111611;
+  background-color: #f7f9f7;
+  box-shadow: 0 0 3px 1px #111611;
 }
