--- a/dev/css/reset.css
+++ b/dev/css/reset.css
@@ -4,8 +4,12 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  background-color: white;
-  color: black;
+  color: #111611;
   font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: lighter;
+  font-weight: bold;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
 }
