--- a/dev/css/customer_home.css
+++ b/dev/css/customer_home.css
@@ -1,10 +1,55 @@
 /*CUSTOMER HOME PAGE*/
 .customer-home {
   text-align: left;
-  width: 94%;
+  width: 100%;
   height: auto;
   margin: auto;
-  /*border: 1px dotted red;*/
+}
+
+/*CUSTOMER HEADER*/
+.customer-header {
+  text-align: right;
+  top: 1%;
+  right: 1%;
+  padding: 3% 2% 0 0;
+}
+
+.customer-header div {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+  font-size: 1.3rem;
+  margin: 0 0.5%;
+}
+
+.customer-human-button {
+  box-shadow: none;
+  color: #f7f9f7;
+  background-color: #111611;
+}
+
+.customer-merchant-button {
+  color: #111611;
+  background-color: #f7f9f7;
+  box-shadow: 0 0 3px 1px #111611;
+}
+
+.customer-merchant-button:hover {
+  box-shadow: none;
+  border: 0.5px solid grey;
+  cursor: pointer;
+}
+
+.customer-merchant-button:active {
+  box-shadow: none;
+  border: 0.5px solid grey;
+  cursor: pointer;
+}
+
+/*INTRO*/
+.intro {
+  width: 94%;
+  margin: auto;
 }
 
 .intro h1 {
@@ -25,29 +70,21 @@
   display: inline;
 }
 
-.read-more {
-  display: inline;
-  text-decoration: underline;
-}
-
-.home-more {
-  display: none;
-}
-
 /*LOCATION AUTH*/
-.location {
+.customer-location {
   text-align: center;
   width: 90%;
   margin: auto;
   padding-top: 10%;
+  /*display: none;*/
 }
 
-.location h4 {
+.customer-location h4 {
   margin-bottom: 5%;
   font-size: 1.1rem;
 }
 
-.authorize {
+.customer-authorize {
   width: 30%;
   margin: auto;
   text-align: center;
@@ -57,26 +94,14 @@
   box-shadow: 0 0 3px 1px #111611;
 }
 
-/**/
-.current {
-  border: 1px dashed black;
-  width: 80%;
-  margin: 0 10%;
-  height: auto;
-  display: none;
+.customer-authorize:hover {
+  box-shadow: none;
+  border: 0.5px solid grey;
+  cursor: pointer;
 }
 
-.store {
-  width: 90%;
-  margin: 5%;
-  height: 20vh;
-  border: 1px solid red;
-}
-
-.shop-button {
-  width: 30%;
-  margin: 0 35% 5% 35%;
-  height: auto;
-  border: 1px solid black;
-  text-align: center;
+.customer-authorize:active {
+  box-shadow: none;
+  border: 0.5px solid grey;
+  cursor: pointer;
 }
